--- a/index.html
+++ b/index.html
@@ -17,13 +17,8 @@
             <img src="/images/logo.png" class="logo">
             <p class="logo-text">Weatherly</p>
             <input placeholder="Search for a city" class="search-input" id="search-input" name="location" onkeydown="enterKey(event);">
-            <input type="submit" id="submit-button" onclick="searchLocation(value);">
+            <input class="submit-button" type="submit" id="submit-button" onclick="searchLocation(value);" placeholder="Search">
         </div>
-
-        <div class="header-right">
-            <button class="temp-button">&deg;C/&deg;F</button>
-        </div>
-        
     </header>
     <main>
         <div class="main-weather">
