--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header-left">
             <img src="/images/logo.png" class="logo">
             <p class="logo-text">Weatherly</p>
-            <input placeholder="Search for a city" class="search-input" id="search-input" name="location" onkeydown="enterKey(event);">
+            <input placeholder="Search for a city" class="search-input" id="search-input" name="location">
             <input class="submit-button" type="submit" id="submit-button" onclick="searchLocation(value);" placeholder="Search">
         </div>
     </header>
