--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="/images/logo.png" class="logo">
             <p class="logo-text">Weatherly</p>
             <input placeholder="Search for a city" class="search-input" id="search-input" name="location">
-            <input class="submit-button" type="submit" id="submit-button" onclick="searchLocation(value);" placeholder="Search">
+            <input class="submit-button" type="submit" id="submit-button" placeholder="Search">
         </div>
     </header>
     <main>
