--- a/index.html
+++ b/index.html
@@ -14,10 +14,22 @@
 <body>
     <header>
         <div class="header-left">
-            <img src="/images/logo.png" class="logo">
-            <p class="logo-text">Weatherly</p>
+            <div class="header-left-logo">
+                <img src="/images/logo.png" class="logo">
+                <p class="logo-text">Weatherly</p>
+            </div>
             <input placeholder="Search for a city" class="search-input" id="search-input" name="location">
             <input class="submit-button" type="submit" id="submit-button" placeholder="Search">
+        </div>
+
+        <div>
+            <div>
+                <img>
+                <p id="name"></p>
+                <p id="admin1"></p>
+                <p id="admin2"></p>
+                <p id="admin3"></p>
+            </div>
         </div>
     </header>
     <main>
