--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
     <header id="header">
+        
         <div class="header-left">
             <div class="header-left-logo">
                 <img src="/images/logo.png" class="logo" />
@@ -92,6 +93,10 @@
             </div>
         </div>
     </main>
+
+    <div id="location-btn-box">
+        <button id="use-location-btn">Use My Location</button>
+    </div>
 
     <script src="script.js"></script>
 </body>
