--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
@@ -11,94 +10,105 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-        rel="stylesheet" />
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Momo+Signature&family=Orbitron:wght@400..900&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <header id="header">
-        
-        <div class="header-left">
-            <div class="header-left-logo">
-                <img src="/images/logo.png" class="logo" />
-                <p class="logo-text">Weatherly</p>
-            </div>
-            <input placeholder="Search for a city(City, Country)" class="search-input" id="search-input"
-                name="location" />
-            <input class="submit-button" type="submit" id="submit-button" placeholder="Search" />
+      <div class="header-left">
+        <div class="header-left-logo">
+          <img src="/images/logo.png" class="logo" />
+          <p class="logo-text">Weatherly</p>
         </div>
+        <input
+          placeholder="Search for a city(City, Country)"
+          class="search-input"
+          id="search-input"
+          name="location"
+        />
+        <input
+          class="submit-button"
+          type="submit"
+          id="submit-button"
+          placeholder="Search"
+        />
+      </div>
 
-        <div class="results-box" id="results-box"></div>
+      <div class="results-box" id="results-box"></div>
     </header>
     <main id="main">
-        <div class="main-weather">
-            <div class="weather-info">
-                <div class="temperature-location-info">
-                    <p id="location"></p>
-                    <p id="day-time"></p>
-                </div>
+      <div class="main-weather">
+        <div class="weather-info">
+          <div class="temperature-location-info">
+            <p id="location"></p>
+            <p id="day-time"></p>
+          </div>
 
-                <div class="temperature-more-info" id="temperature-more-info">
-                    <div class="temperature-more-detailed-info">
-                        <p id="temperature"></p>
-                        <p id="temperature-info"></p>
-                    </div>
-                    <div>
-                        <img id="weather-img" />
-                    </div>
-                </div>
+          <div class="temperature-more-info" id="temperature-more-info">
+            <div class="temperature-more-detailed-info">
+              <p id="temperature"></p>
+              <p id="temperature-info"></p>
             </div>
-
-            <div class="weather-detailed-info" id="weather-detailed-info">
-                <div class="weather-detailed-info-box" id="weather-detailed-info-box">
-                    <img class="weather-icons" id="humidity-image" />
-                    <p id="humidity" class="units-info"></p>
-                    <p id="humidity-info" class="units-name"></p>
-                </div>
-                <div class="weather-detailed-info-box">
-                    <img id="wind-image" class="weather-icons" />
-                    <p id="wind-speed" class="units-info"></p>
-                    <p id="wind-speed-info" class="units-name"></p>
-                </div>
-                <div class="weather-detailed-info-box">
-                    <img id="rain-image" class="weather-icons" />
-                    <p id="rain-text" class="units-info"></p>
-                    <p id="rain-info" class="units-name"></p>
-                </div>
-                <div class="weather-detailed-info-box">
-                    <img class="weather-icons" id="wind-direction-image" />
-                    <p id="wind-direction" class="units-info"></p>
-                    <p id="wind-direction-info" class="units-name"></p>
-                </div>
+            <div>
+              <img id="weather-img" />
             </div>
+          </div>
         </div>
 
-        <div class="weekly-forecast-box">
-            <p class="weekly-forecast-text" id="weekly-forecast-text">
-            </p>
-
-            <div class="week-days-forecast">
-                <div id="first-day-box" class="week-days-forecast-box"></div>
-
-                <div id="second-day-box" class="week-days-forecast-box"></div>
-
-                <div id="third-day-box" class="week-days-forecast-box"></div>
-
-                <div id="fourth-day-box" class="week-days-forecast-box"></div>
-
-                <div id="fifth-day-box" class="week-days-forecast-box"></div>
-
-                <div id="sixth-day-box" class="week-days-forecast-box"></div>
-            </div>
+        <div class="weather-detailed-info" id="weather-detailed-info">
+          <div class="weather-detailed-info-box" id="weather-detailed-info-box">
+            <img class="weather-icons" id="humidity-image" />
+            <p id="humidity" class="units-info"></p>
+            <p id="humidity-info" class="units-name"></p>
+          </div>
+          <div class="weather-detailed-info-box">
+            <img id="wind-image" class="weather-icons" />
+            <p id="wind-speed" class="units-info"></p>
+            <p id="wind-speed-info" class="units-name"></p>
+          </div>
+          <div class="weather-detailed-info-box">
+            <img id="rain-image" class="weather-icons" />
+            <p id="rain-text" class="units-info"></p>
+            <p id="rain-info" class="units-name"></p>
+          </div>
+          <div class="weather-detailed-info-box">
+            <img class="weather-icons" id="wind-direction-image" />
+            <p id="wind-direction" class="units-info"></p>
+            <p id="wind-direction-info" class="units-name"></p>
+          </div>
         </div>
+      </div>
+
+      <div class="weekly-forecast-box">
+        <p class="weekly-forecast-text" id="weekly-forecast-text"></p>
+
+        <div class="week-days-forecast">
+          <div id="first-day-box" class="week-days-forecast-box"></div>
+
+          <div id="second-day-box" class="week-days-forecast-box"></div>
+
+          <div id="third-day-box" class="week-days-forecast-box"></div>
+
+          <div id="fourth-day-box" class="week-days-forecast-box"></div>
+
+          <div id="fifth-day-box" class="week-days-forecast-box"></div>
+
+          <div id="sixth-day-box" class="week-days-forecast-box"></div>
+        </div>
+      </div>
     </main>
 
     <div id="location-btn-box">
-        <button id="use-location-btn">Use My Location</button>
+      <button id="use-location-btn">Use My Location</button>
     </div>
 
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
